# url_shotener

./: .gitignore  app.py  pyproject.toml
app/src/: main.py
app/src/models/: user.py
app/src/routers/: slug.py
app/src/schemas/: slug.py
app/src/services/: slug.py
src/src/routers/: slug.py
src/urlshortener/: main.py
src/urlshortener/schemas/: slug.py
